# eternal_v2

./: .gitignore  Cargo.toml
account/: Cargo.toml
account/src/: lib.rs  wallet.rs
core/: Cargo.toml
core/src/: block.rs  blockchain.rs  lib.rs  transaction.rs
macro/: Cargo.toml
macro/src/: lib.rs
networking/: Cargo.toml
networking/src/: lib.rs
networking/src/p2p/: mod.rs
protocol/: Cargo.toml
protocol/src/: accounts.rs  blockchain.rs  lib.rs
tests/: Cargo.toml
tests/src/: main.rs
vm/: Cargo.toml
vm/src/: lib.rs  smart_contract.rs
