[package]
name = "eternal-account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["std"] }
rand = "0.8.5"
hex = "0.4.3"
secp256k1 = "0.27.0"
