[package]
name = "eternal-networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eternal-account = { version = "0.1.0", path = "../account" }
libp2p = { version = "0.51.3", features = ["full"] }
once_cell = "1.17.1"
tokio = { version = "1.28.1", features = ["full"] }
