[package]
name = "eternal-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
eternal-core = { path = "../core" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = "1.28.1"
